Closed
Bug 99229
Opened 24 years ago
Closed 24 years ago
Typo in nsTableFrame.cpp
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
VERIFIED
FIXED
People
(Reporter: attinasi, Assigned: attinasi)
Details
There is an obvious typo that I found when I hit an assertion in one of my
testcases (%height but no width specified on a table). I'd like to just land
this simple change, but I'll request the traditional r and sr...
The offending line is at
http://lxr.mozilla.org/seamonkey/source/layout/html/table/src/nsTableFrame.cpp#4023
It should be checking position->mHeight, not mWidth
PROPOSED PATCH:
Index: nsTableFrame.cpp
===================================================================
RCS file: /cvsroot/mozilla/layout/html/table/src/nsTableFrame.cpp,v
retrieving revision 3.446
diff -r3.446 nsTableFrame.cpp
4023c4023
< if (position->mWidth.GetPercentValue() > 0.0f) {
---
> if (position->mHeight.GetPercentValue() > 0.0f) {
Assignee | ||
Updated•24 years ago
|
Status: NEW → ASSIGNED
Comment 1•24 years ago
|
||
sr=waterson
Comment 2•24 years ago
|
||
r=karnaze
Assignee | ||
Comment 3•24 years ago
|
||
Fixed on Trunk.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•