Fixed a typo that was causing an assertion in one of my testcases: b=99229, r=karnaze sr=waterson